trafficmanagement/deploymentV1.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-deployment-example
  labels:
    app: canary-deployment-example
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: canary-deployment-example
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: canary-deployment-example-v1
  labels:
    app: canary-deployment-example
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: canary-deployment-example
      version: v1
  template:
    metadata:
      labels:
        app: canary-deployment-example
        version: v1
    spec:
      containers:
      # replace the repository URL with your own repository (e.g. {DockerID}/http-db-service:0.0.x for Docker Hub).
      - image: jcawley5/nginx-hello
        imagePullPolicy: Always
        name: canary-deployment-example
        ports:
        - name: http
          containerPort: 80
